CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(OptionSQL)

# 项目文件路径
SET(OPTIONSQL_PATH ${PROJECT_SOURCE_DIR} CACHE STRING "Adds a path to numcpp" FORCE)
SET(OPTIONSQL_PATH_BIN ${OPTIONSQL_PATH}/lib/ CACHE STRING "Adds a path to output dir" FORCE)
SET(OPTIONSQL_PATH_DEPENDENCIES ${OPTIONSQL_PATH}/contrib CACHE STRING "Adds a path to numcpp dependencies" FORCE)
SET(OPTIONSQL_PATH_TESTS ${OPTIONSQL_PATH}/tests CACHE STRING "Adds a path to numcpp tests" FORCE)
SET(OPTIONSQL_PATH_INCLUDE ${OPTIONSQL_PATH}/include CACHE STRING "Adds a path to numcpp header" FORCE)
SET(OPTIONSQL_PATH_HEADER ${OPTIONSQL_PATH_INCLUDE}/OptionSQL CACHE STRING "Adds a path to numcpp header" FORCE)
SET(OPTIONSQL_PATH_SOURCE ${OPTIONSQL_PATH}/source CACHE STRING "Adds a path to numcpp source" FORCE)

# 编译选项
OPTION(OPTIONSQL_BUILD_NO_TESTS "ON to disable test binary generation" OFF)
OPTION(OPTIONSQL_BUILD_SSE "ON for use OFF for ignore" OFF)
OPTION(OPTIONSQL_BUILD_DEBUG_MODE "ON for debug or OFF for release" ON)
OPTION(OPTIONSQL_BUILD_MUTILTHREAD_DLL "ON for /MD OFF for /MT" ON)

# 添加项目
ADD_SUBDIRECTORY(source)

# 单元测试
IF(NOT OPTIONSQL_BUILD_NO_TESTS)
	ADD_SUBDIRECTORY(tests)
ENDIF()