# contrib folders
INCLUDE_DIRECTORIES(${OPTIONSQL_PATH_DEPENDENCIES}/glog/src/windows)
INCLUDE_DIRECTORIES(${OPTIONSQL_PATH_DEPENDENCIES}/libevent/include)

# OptionSQL folder
INCLUDE_DIRECTORIES(${OPTIONSQL_PATH_INCLUDE})

# lib folder for link
LINK_DIRECTORIES(${OPTIONSQL_LIBRARY_OUTPUT_PATH})

# framework
ADD_SUBDIRECTORY(runtime)
ADD_SUBDIRECTORY(sql)
ADD_SUBDIRECTORY(storage)