SET(LIB_NAME runtime)
SET(LIB_OUTNAME ${LIB_NAME})

SET(HEADER_PATH ${OPTIONSQL_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${OPTIONSQL_PATH_SOURCE}/${LIB_OUTNAME})

SET(RUNTIME_LIST
)
SOURCE_GROUP(${LIB_NAME} FILES ${RUNTIME_LIST})

ADD_LIBRARY(${LIB_OUTNAME} STATIC ${RUNTIME_LIST})

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "core")