SET(LIB_NAME sql)
SET(LIB_OUTNAME ${LIB_NAME})

SET(HEADER_PATH ${OPTIONSQL_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${OPTIONSQL_PATH_SOURCE}/${LIB_OUTNAME})

SET(SQL_LIST
    ${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${SQL_LIST})

ADD_EXECUTABLE(${LIB_OUTNAME} ${SQL_LIST})
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE glog)

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "core")