SET(LIB_NAME storage)
SET(LIB_OUTNAME ${LIB_NAME})

SET(HEADER_PATH ${OPTIONSQL_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${OPTIONSQL_PATH_SOURCE}/${LIB_OUTNAME})

#SET(STORAGE_LIST
#    ${SOURCE_PATH}/errcode.cpp
#)
#SOURCE_GROUP(${LIB_NAME} FILES ${STORAGE_LIST})

#ADD_LIBRARY(${LIB_OUTNAME} STATIC ${STORAGE_LIST})

#SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "core")